reference links formatting

--- a/docs/governance/working-groups.mdx
+++ b/docs/governance/working-groups.mdx
@@ -28,20 +28,19 @@ You can find more information below about all _active_ working groups.
 
 ### IOT PoC Working Group
 
-The IOT Proof-of-Coverage (PoC) Working Group was created to develop guidance on improvements to the
-original PoC algorithm. The Working Group is made up of 10 volunteers and stewarded by the Helium
-Foundation. The IoT network is Helium’s original and largest sub-network. During its long history,
-it has been governed by some of the most important Helium Improvement Proposals (HIPs) ever
-published (HIP-10, HIP-15, HIP-17, HIP-19, etc). Its continued success depends on the Working
-Group's ability to incentivize LoRaWAN Hotspot deployments in a manner that encourages network
-growth and useful coverage. Helium’s IoT Proof-of-Coverage system is the unique engine behind it
-all.
+The IOT Proof-of-Coverage ("PoC") Working Group was created to develop guidance on improvements to
+the original PoC algorithm. The Working Group is made up of 10 volunteers and stewarded by the
+Helium Foundation. The IoT network is Helium’s original and largest sub-network. During its long
+history, it has been governed by some of the most important Helium Improvement Proposals (HIPs) ever
+published (HIP-10[hip-10], HIP-15[hip-15], HIP-17[hip-17], HIP-19[hip-19], etc). Its continued
+success depends on the Working Group's ability to incentivize LoRaWAN Hotspot deployments in a
+manner that encourages network growth and useful coverage. Helium’s IoT Proof-of-Coverage system is
+the unique engine behind it all.
 
 The Group consists of 10 Community members that were self-nominated and voted in by the Community
 for three months. Members will meet for 30 minutes each week to work on the HIPs.
 
-You can find the IOT PoC Working Group Charter
-[here](https://docs.google.com/document/d/e/2PACX-1vSIIyDSEkIzjEJc-OJx6SvchFVaPpuOitPWhNl5KBYKTa66L2KC-_zVHKktchQfiYT8RmYQlhjPhkxE/pub).
+You can find the IOT PoC Working Group Charter [here][iot-wg-charter].
 
 ### MOBILE PoC Working Group
 
@@ -54,8 +53,7 @@ roll out an effective Proof-of-Coverage framework that incentivizes useful cover
 The Group consists of 10 Community members that were self-nominated and voted in by the Community
 for three months. Members will meet for 30 mins each week to work on the HIPs.
 
-You can find the MOBILE PoC Working Group Charter
-[here](https://docs.google.com/document/u/2/d/e/2PACX-1vRcK8J95XIwkLEM8gHy-rnaWRZ3Af2ZfV5nfeqqyHsBwC9S-EBCoKw-7jykYFvfiqfVp9D0Yg8ctc_m/pub).
+You can find the MOBILE PoC Working Group Charter [here][mobile-wg-charter].
 
 ---
 
@@ -81,3 +79,12 @@ over time:
 
 Everyone is welcome to stay up to date on Working Group progress by following along in the fishbowl
 channels in Discord. You can find these channels under the Category, "Governance".
+
+[iot-wg-charter]:
+  https://docs.google.com/document/d/e/2PACX-1vSIIyDSEkIzjEJc-OJx6SvchFVaPpuOitPWhNl5KBYKTa66L2KC-_zVHKktchQfiYT8RmYQlhjPhkxE/pub
+[mobile-wg-charter]:
+  https://docs.google.com/document/u/2/d/e/2PACX-1vRcK8J95XIwkLEM8gHy-rnaWRZ3Af2ZfV5nfeqqyHsBwC9S-EBCoKw-7jykYFvfiqfVp9D0Yg8ctc_m/pub
+[hip-10]: https://github.com/helium/HIP/blob/main/0010-usage-based-data-transfer-rewards.md
+[hip-15]: https://github.com/helium/HIP/blob/main/0015-beaconing-rewards.md
+[hip-17]: https://github.com/helium/HIP/blob/main/0017-hex-density-based-transmit-reward-scaling.md
+[hip-19]: https://github.com/helium/HIP/blob/main/0019-third-party-manufacturers.md
