--- a/docs/governance/committees.mdx
+++ b/docs/governance/committees.mdx
@@ -21,11 +21,12 @@ Today, the Helium Community utilizes one Committee, the Manufacturing Compliance
 
 ## Manufacturing Compliance Committee (MCC)
 
-**Origin:** The MCC was established by
-[HIP 19](https://github.com/helium/HIP/blob/main/0019-third-party-manufacturers.md).
+**Origin:** The MCC was established by [HIP-19][hip-19].
 
 **Purpose:** The MCC sets basic technical, security, and ethical standards & verifies that these
 standards are met by manufacturers joining the Helium Network through the HIP19 process.
 
-You can find more information about the MCC, Ethics for Makers/Manufacturers, and more
-[here](/hotspot-makers/compliance-committee).
+You can find more information about the MCC, Ethics for Makers/Manufacturers, and more [here][mcc].
+
+[hip-19]: https://github.com/helium/HIP/blob/main/0019-third-party-manufacturers.md
+[mcc]: /hotspot-makers/compliance-committee
