--- a/docs/governance/governance.mdx
+++ b/docs/governance/governance.mdx
@@ -32,11 +32,11 @@ Read on for more information and join us!
 
 ### Discord
 
-The [Helium Discord](https://discord.gg/helium) is the primary communication channel for the Helium
-Network Community. Here you'll find real-time, in-depth discussion on all parts of the Helium
-Network. It is also the primary venue to get support for using the Network.
+The [Helium Discord][discord] is the primary communication channel for the Helium Network Community.
+Here you'll find real-time, in-depth discussion on all parts of the Helium Network. It is also the
+primary venue to get support for using the Network.
 
-- [Join the Helium Community Discord](https://discord.gg/helium)
+- [Join the Helium Community Discord][discord]
 
 ---
 
@@ -50,20 +50,17 @@ open-source development, HIPs are used to introduce, debate, and approve/reject 
 elements of the Network like the core blockchain, HNT, IOT MOBILE token economics, and Network
 governance itself.
 
-In the earliest phases, it's best to vet an idea with the Helium community
-[via Discord](https://discord.gg/helium). This is a good way to see if there is initial support for
-the idea, or if it's been discussed before. The
-[hip-discussion](discord://discord.com/channels/404106811252408320/730243559873052754) channel is a
-great place to circulate an early idea.
+In the earliest phases, it's best to vet an idea with the Helium community [via Discord][discord].
+This is a good way to see if there is initial support for the idea, or if it's been discussed
+before. The [hip-discussion][discord-hip] channel is a great place to circulate an early idea.
 
-HIPs are managed entirely from the [HIP GitHub repository](https://github.com/helium/HIP). HIP
-discussions also happen in the `Helium Improvement Proposal` channels of
-[Helium Discord](https://discord.gg/helium). All members of the Helium Community are encouraged to
-create HIPs and participate in the governance process.
+HIPs are managed entirely from the [HIP GitHub repository][github-hip]. HIP discussions also happen
+in the `Helium Improvement Proposal` channels of [Helium Discord][discord]. All members of the
+Helium Community are encouraged to create HIPs and participate in the governance process.
 
-- [HIP Repo on GitHub](https://github.com/helium/HIP)
+- [HIP Repo on GitHub][github-hip]
 
-Learn more about HIPs [here](/hip)
+Learn more about HIPs [here][hip-docs]
 
 ---
 
@@ -71,17 +68,17 @@ Learn more about HIPs [here](/hip)
 
 ### Realms
 
-[Realms](https://app.realms.today/) is a Solana native tool for DAO infrastructure. As part of the
-migration to the Solana Blockchain, the Helium Community adopted Realms as the tool for staking,
-delegating, and on-chain voting. This tool replaces Helium Vote.
+[Realms][realms] is a Solana native tool for DAO infrastructure. As part of the migration to the
+Solana Blockchain, the Helium Community adopted Realms as the tool for staking, delegating, and
+on-chain voting. This tool replaces Helium Vote.
 
-Read [this page](/vote-escrow/realms) to learn how to navigate Realms.
+Read [this page][realms-tutorial] to learn how to navigate Realms.
 
 Join the DAOs on Realms.
 
-- [Helium DAO](https://www.realms.heliumvote.com/dao/hnt)
-- [IOT DAO](https://www.realms.heliumvote.com/dao/iot)
-- [MOBILE DAO](https://www.realms.heliumvote.com/dao/mobile)
+- [Helium DAO][helium-dao]
+- [IOT DAO][iot-dao]
+- [MOBILE DAO][mobile-dao]
 
 ---
 
@@ -89,28 +86,42 @@ Join the DAOs on Realms.
 
 ### Monthly Community Calls
 
-The Helium Community holds monthly video calls (led by the
-[Helium Foundation](https://www.helium.foundation/)). These typically happen on the the **4th
-Wednesday of each month at Noon ET**. Each call has an open agenda, and any community member can
-join and add items to the agenda to be discussed.
+The Helium Community holds monthly video calls (led by the [Helium Foundation][foundation]). These
+typically happen on the the **4th Wednesday of each month at Noon ET**. Each call has an open
+agenda, and any community member can join and add items to the agenda to be discussed.
 
-- [Community Call Notes and Agenda](https://docs.google.com/document/d/1bMm2alBigBj3detA775Dn0Gz9UM5XczAeK9vnjBB3l0/edit#)
-- [Video recordings of previous community calls](https://helium.foundation/community-call) are
-  linked in the Community Call notes.
+- [Community Call Notes and Agenda][community-call-notes]
+- [Video recordings of previous community calls][community-call-video] are linked in the Community
+  Call notes.
 
 ### Discord
 
-All HIP and Governance discussions take place on the
-[Helium Discord](https://discord.com/invite/helium).
+All HIP and Governance discussions take place on the [Helium Discord](discord).
 
 ### Socials + Ecosystem Voices
 
 As a network steward, the Helium Foundation posts important governance news, calls to vote, and more
-on Twitter. [Follow @HeliumFndn](https://twitter.com/HeliumFndn) on Twitter to stay up to date.
+on Twitter. [Follow @HeliumFndn][foundation-twitter] on Twitter to stay up to date.
 
 As a decentralized network, there are numerous voices that discuss governance, host debates, and
 explain HIPs in layman's terms. You can find many of these influential voices in Discord, on
 Twitter, or Youtube.
 
 _If you'd like to have your name or channels listed and linked here as a governance resource, submit
-a ticket in the Helium [Docs Repo](https://github.com/helium/docs/issues)._
+a ticket in the Helium [Docs Repo][docs-issues]._
+
+[discord]: https://discord.gg/helium
+[docs-issues]: https://github.com/helium/docs/issues
+[community-call-notes]:
+  https://docs.google.com/document/d/1bMm2alBigBj3detA775Dn0Gz9UM5XczAeK9vnjBB3l0
+[community-call-video]: https://helium.foundation/community-call
+[foundation]: https://www.helium.foundation
+[helium-dao]: https://www.realms.heliumvote.com/dao/hnt
+[iot-dao]: https://www.realms.heliumvote.com/dao/iot
+[mobile-dao]: https://www.realms.heliumvote.com/dao/mobile
+[realms]: https://app.realms.today/
+[realms-tutorial]: /vote-escrow/realms
+[github-hip]: https://github.com/helium/HIP
+[discord-hip]: discord://discord.com/channels/404106811252408320/730243559873052754
+[hip-docs]: /hip
+[foundation-twitter]: https://twitter.com/HeliumFndn
