--- a/docs/governance/realms.mdx
+++ b/docs/governance/realms.mdx
@@ -16,7 +16,7 @@ This replaces Helium Vote.
 
 To approve or deny changes to the blockchain, economics, or governance of the Helium Network; The
 Helium Network leverages on-chain voting which is open to the entire community. This on-chain voting
-is facilitated through the website [Realms](https://realms.today).
+is facilitated through the website [Realms][realms].
 
 ---
 
@@ -28,7 +28,7 @@ subDAOs in the future. When you stake HNT, you'll receive veHNT in your wallet. 
 position of voting power for which you hold in the DAO or subDAO. It is not tradable or
 transferrable.
 
-You can learn more about Staking on Realms [here.](/vote-escrow/realms)
+You can learn more about Staking on Realms [here.][staking]
 
 ---
 
@@ -36,7 +36,7 @@ You can learn more about Staking on Realms [here.](/vote-escrow/realms)
 
 **On-Chain Fees:** All veToken holders must have SOL in their voting wallet to submit a vote
 transaction. You can access more SOL through many different options. If you are using SOL for the
-first time, check out [this onboarding and swap tool](/helium-tokens/sol-token#swap-utility).
+first time, check out [this onboarding and swap tool][swap-utility].
 
 **Ballot Options:** Proposal vote options will typically be `For` or `Against`.
 
@@ -75,9 +75,9 @@ for all platforms, but it must have veTokens for the specific DAO or subDAO host
 
 The links for the Realms governance portals are:
 
-- [https://realms.heliumvote.com/dao/hnt](https://realms.heliumvote.com/dao/hnt)
-- [https://realms.heliumvote.com/dao/iot](https://realms.heliumvote.com/dao/iot)
-- [https://realms.heliumvote.com/dao/mobile](https://realms.heliumvote.com/dao/mobile)
+- [https://realms.heliumvote.com/dao/hnt][realms-hnt]
+- [https://realms.heliumvote.com/dao/iot][realms-iot]
+- [https://realms.heliumvote.com/dao/mobile][realms-mobile]
 
 Sign in to these using the in-app browser from the Helium Wallet App.
 
@@ -127,9 +127,17 @@ to, a vote can be relinquished and re-voted to apply the new voting power.
 
 ## Staying Informed
 
-The majority of HIP discussion happens on the [Helium Discord](https://discord.gg/helium). Many HIPs
-get their start in the #hip-discussion channel. Additionally, each HIP under consideration gets its
-own channel for focused discussion.
+The majority of HIP discussion happens on the [Helium Discord][discord]. Many HIPs get their start
+in the #hip-discussion channel. Additionally, each HIP under consideration gets its own channel for
+focused discussion.
 
 When HIPs are open for vote, notifications are sent by the Helium Foundation on Discord, Twitter,
 and push notifications in the Helium Wallet App.
+
+[realms]: https://realms.today
+[realms-hnt]: https://realms.heliumvote.com/dao/hnt
+[realms-iot]: https://realms.heliumvote.com/dao/iot
+[realms-mobile]: https://realms.heliumvote.com/dao/mobile
+[discord]: https://discord.gg/helium
+[staking]: /vote-escrow/realms
+[swap-utility]: /helium-tokens/sol-token#swap-utility
