--- a/docs/governance/voting.mdx
+++ b/docs/governance/voting.mdx
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 To approve or deny changes to the blockchain, economics, or governance of the Helium Network; The
 Helium Network leverages on-chain voting which is open to the entire community. This on-chain voting
-is currently facilitated through [Realms](https://www.realms.today).
+is currently facilitated through [Realms][realms].
 
 ## Key Terms
 
@@ -38,31 +38,38 @@ MOBILE. Voting on the IOT and MOBILE networks will require veIOT and veMOBILE re
 
 ### veHNT
 
-The [Helium DAO](https://realms.heliumvote.com/dao/hnt) and the Helium Network serve as the
-overarching system that enables a multitude of networks (subDAOs) to exist. As such, veHNT's role in
-network governance is in matters affecting the entire network. For example, a proposal affecting HNT
-emissions would be voted on using veHNT.
+The [Helium DAO][realms-helium] and the Helium Network serve as the overarching system that enables
+a multitude of networks (subDAOs) to exist. As such, veHNT's role in network governance is in
+matters affecting the entire network. For example, a proposal affecting HNT emissions would be voted
+on using veHNT.
 
-Additionally, veHNT can be [delegated](/vote-escrow/realms#delegating-stakes) to a subDAO in order
-to earn a portion of that network's tokens.
+Additionally, veHNT can be [delegated][delegate] to a subDAO in order to earn a portion of that
+network's tokens.
 
 ### veIOT
 
-The [IOT subDAO](https://realms.heliumvote.com/dao/iot) focuses on the original vision of the Helium
-Network, supporting the growth and development of IoT devices and applications. Staking your IOT
-tokens to the IOT subDAO grants veIOT which can be used to vote on matters specific to the IOT
-network. For example, a proposal affecting proof of coverage behavior for IoT Hotspots.
+The [IOT subDAO][realms-iot] focuses on the original vision of the Helium Network, supporting the
+growth and development of IoT devices and applications. Staking your IOT tokens to the IOT subDAO
+grants veIOT which can be used to vote on matters specific to the IOT network. For example, a
+proposal affecting proof of coverage behavior for IoT Hotspots.
 
 ### veMOBILE
 
-The [MOBILE subDAO](https://realms.heliumvote.com/dao/mobile) is dedicated to the growth and
-expansion of the Helium Network in the mobile and telecommunications sectors. Staking your IOT
-tokens to the IOT subDAO grants veIOT which can be used to vote on matters specific to the IOT
-network. For example, a proposal affecting proof of coverage behavior for IoT Hotspots.
+The [MOBILE subDAO][realms-mobile] is dedicated to the growth and expansion of the Helium Network in
+the mobile and telecommunications sectors. Staking your IOT tokens to the IOT subDAO grants veIOT
+which can be used to vote on matters specific to the IOT network. For example, a proposal affecting
+proof of coverage behavior for IoT Hotspots.
 
 :::note How to stake tokens
 
 For a full walkthrough on how to stake your tokens to the Helium Network or one of its subDAOs, see
-the [Realms Staking](/vote-escrow/voting-power) guide.
+the [Realms Staking][voting-power] guide.
 
 :::
+
+[realms]: https://www.realms.today
+[realms-helium]: https://realms.heliumvote.com/dao/hnt
+[realms-iot]: https://realms.heliumvote.com/dao/iot
+[realms-mobile]: https://realms.heliumvote.com/dao/mobile
+[delegate]: /vote-escrow/realms#delegating-stakes
+[voting-power]: /vote-escrow/voting-power
