--- a/docs/governance/governance.mdx
+++ b/docs/governance/governance.mdx
@@ -96,7 +96,7 @@ agenda, and any community member can join and add items to the agenda to be disc
 
 ### Discord
 
-All HIP and Governance discussions take place on the [Helium Discord](discord).
+All HIP and Governance discussions take place on the [Helium Discord][discord].
 
 ### Socials + Ecosystem Voices
 
