--- a/docs/oracles/rewards-oracles.mdx
+++ b/docs/oracles/rewards-oracles.mdx
@@ -36,7 +36,7 @@ and the veHNT backing the IOT Network and emits rewards to each Hotspot.
 As a reminder, the Data Transfer Verifier and the PoC Verifier already do much of the heavy lifting
 by including the shares each Hotspot should receive.
 
-## Mobile Rewards Oracle
+## MOBILE Rewards Oracle
 
 The MOBILE Rewards Oracle combines the Verified MOBILE Receipts, the Verified MOBILE Data Transfer
 Receipts, and the veHNT backing the MOBILE Network and emits rewards to each Hotspot.
