Self-closing line breaks to fix build

--- a/docs/oracles/oracle-data.mdx
+++ b/docs/oracles/oracle-data.mdx
@@ -77,26 +77,26 @@ format in gz compressed files. The table below provides the top-level data categ
 file types comprised within each data category prefix, the filename pattern for each file type, and
 provides a link to the corresponding protobuf used to decode the data.
 
-| Category                          | File Type                                 | Pattern                                 | Protobuf Definition                                                                                                                                                                                   |
-| :-------------------------------- | :---------------------------------------- | :-------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `foundation-iot-entropy`          | `Entropy`                                 | `entropy.*`                             | [`entropy.proto`<br>(Line 5: `entropy_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/entropy.proto#L5)                                                |
-| `foundation-iot-ingest`           | `IotBeaconIngestReport`                   | `iot_beacon_ingest_report.*`            | [`service/poc_lora.proto`<br>(Line 83: `lora_beacon_ingest_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L83)                 |
-| `foundation-iot-ingest`           | `IotWitnessIngestReport`                  | `iot_witness_ingest_report.*`           | [`service/poc_lora.proto`<br>(Line 90: `lora_witness_ingest_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L90)                |
-| `foundation-iot-packet-ingest`    | `PacketReport`                            | `packetreport.*`                        | [`service/packet_router.proto`<br>(Line 8: `packet_router_packet_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/packet_router.proto#L8)       |
-| `foundation-iot-verified-rewards` | `IotRewardShare` (starting 2023-04-18)    | `iot_reward_share.*`                    | [`service/poc_lora.proto`<br>(Line 186: `iot_reward_share`)](https://github.com/helium/proto/blob/40388d260fd3603f453a965dbc13f79470b5adcb/src/service/poc_lora.proto#L186)                           |
-| `foundation-iot-verified-rewards` | `IotPoc`                                  | `iot_poc.*`                             | [`service/poc_lora.proto`<br>(Line 162: `lora_poc_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L162)                                |
-| `foundation-iot-verified-rewards` | `IotInvalidBeaconReport`                  | `iot_invalid_beacon.*`                  | [`service/poc_lora.proto`<br>(Line 125: `lora_invalid_beacon_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L125)              |
-| `foundation-iot-verified-rewards` | `IotInvalidWitnessReport`                 | `iot_invalid_witness.*`                 | [`service/poc_lora.proto`<br>(Line 133: `lora_invalid_witness_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L133)             |
-| `foundation-iot-verified-rewards` | `GatewayRewardShare`                      | `gateway_reward_share.*`                | [`service/poc_lora.proto`<br>(Line 171: `gateway_reward_share`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L171)                       |
-| `foundation-iot-verified-rewards` | `RewardManifest`                          | `reward_manifest.*`                     | [`reward_manifest.proto`<br>(Line 5: `reward_manifest`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5)                                  |
-| `foundation-mobile-ingest`        | `CellHeartbeatIngestReport`               | `heartbeat_report.*`                    | [`service/poc_mobile.proto`<br>(Line 50: `cell_heartbeat_ingest_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L50)          |
-| `foundation-mobile-ingest`        | `CellSpeedtestIngestReport`               | `speedtest_report.*`                    | [`service/poc_mobile.proto`<br>(Line 25: `speedtest_ingest_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L25)               |
-| `foundation-mobile-ingest`        | `DataTransferSessionIngestReport`         | `data_transfer_session_ingest_report.*` | [`service/poc_mobile.proto`<br>(Line 177: `data_transfer_session_ingest_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L177) |
-| `foundation-mobile-verified`      | `ValidatedHeartbeat`                      | `validated_heartbeat.*`                 | [`service/poc_mobile.proto`<br>(Line 80: `heartbeat`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L80)                                |
-| `foundation-mobile-verified`      | `SpeedtestAvg`                            | `speedtest_avg.*`                       | [`service/poc_mobile.proto`<br>(Line 97: `speedtest_avg`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L97)                            |
-| `foundation-mobile-verified`      | `RadioRewardShare`                        | `radio_reward_share.*`                  | [`service/poc_mobile.proto`<br>(Line 118: `radio_reward_share`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L118)                     |
-| `foundation-mobile-verified`      | `MobileRewardShare` (starting 2023-04-18) | `mobile_reward_share.*`                 | [`service/poc_mobile.proto`<br>(Line 145: `mobile_reward_share`)](https://github.com/helium/proto/blob/40388d260fd3603f453a965dbc13f79470b5adcb/src/service/poc_mobile.proto#L145)                    |
-| `foundation-mobile-verified`      | `RewardManifest`                          | `reward_manifest.*`                     | [`reward_manifest.proto`<br>(Line 5: `reward_manifest`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5)                                  |
+| Category                          | File Type                                 | Pattern                                 | Protobuf Definition                                                                                                                                                                                     |
+| :-------------------------------- | :---------------------------------------- | :-------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| `foundation-iot-entropy`          | `Entropy`                                 | `entropy.*`                             | [`entropy.proto`<br />(Line 5: `entropy_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/entropy.proto#L5)                                                |
+| `foundation-iot-ingest`           | `IotBeaconIngestReport`                   | `iot_beacon_ingest_report.*`            | [`service/poc_lora.proto`<br />(Line 83: `lora_beacon_ingest_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L83)                 |
+| `foundation-iot-ingest`           | `IotWitnessIngestReport`                  | `iot_witness_ingest_report.*`           | [`service/poc_lora.proto`<br />(Line 90: `lora_witness_ingest_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L90)                |
+| `foundation-iot-packet-ingest`    | `PacketReport`                            | `packetreport.*`                        | [`service/packet_router.proto`<br />(Line 8: `packet_router_packet_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/packet_router.proto#L8)       |
+| `foundation-iot-verified-rewards` | `IotRewardShare` (starting 2023-04-18)    | `iot_reward_share.*`                    | [`service/poc_lora.proto`<br />(Line 186: `iot_reward_share`)](https://github.com/helium/proto/blob/40388d260fd3603f453a965dbc13f79470b5adcb/src/service/poc_lora.proto#L186)                           |
+| `foundation-iot-verified-rewards` | `IotPoc`                                  | `iot_poc.*`                             | [`service/poc_lora.proto`<br />(Line 162: `lora_poc_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L162)                                |
+| `foundation-iot-verified-rewards` | `IotInvalidBeaconReport`                  | `iot_invalid_beacon.*`                  | [`service/poc_lora.proto`<br />(Line 125: `lora_invalid_beacon_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L125)              |
+| `foundation-iot-verified-rewards` | `IotInvalidWitnessReport`                 | `iot_invalid_witness.*`                 | [`service/poc_lora.proto`<br />(Line 133: `lora_invalid_witness_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L133)             |
+| `foundation-iot-verified-rewards` | `GatewayRewardShare`                      | `gateway_reward_share.*`                | [`service/poc_lora.proto`<br />(Line 171: `gateway_reward_share`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L171)                       |
+| `foundation-iot-verified-rewards` | `RewardManifest`                          | `reward_manifest.*`                     | [`reward_manifest.proto`<br />(Line 5: `reward_manifest`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5)                                  |
+| `foundation-mobile-ingest`        | `CellHeartbeatIngestReport`               | `heartbeat_report.*`                    | [`service/poc_mobile.proto`<br />(Line 50: `cell_heartbeat_ingest_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L50)          |
+| `foundation-mobile-ingest`        | `CellSpeedtestIngestReport`               | `speedtest_report.*`                    | [`service/poc_mobile.proto`<br />(Line 25: `speedtest_ingest_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L25)               |
+| `foundation-mobile-ingest`        | `DataTransferSessionIngestReport`         | `data_transfer_session_ingest_report.*` | [`service/poc_mobile.proto`<br />(Line 177: `data_transfer_session_ingest_report_v1`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L177) |
+| `foundation-mobile-verified`      | `ValidatedHeartbeat`                      | `validated_heartbeat.*`                 | [`service/poc_mobile.proto`<br />(Line 80: `heartbeat`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L80)                                |
+| `foundation-mobile-verified`      | `SpeedtestAvg`                            | `speedtest_avg.*`                       | [`service/poc_mobile.proto`<br />(Line 97: `speedtest_avg`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L97)                            |
+| `foundation-mobile-verified`      | `RadioRewardShare`                        | `radio_reward_share.*`                  | [`service/poc_mobile.proto`<br />(Line 118: `radio_reward_share`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L118)                     |
+| `foundation-mobile-verified`      | `MobileRewardShare` (starting 2023-04-18) | `mobile_reward_share.*`                 | [`service/poc_mobile.proto`<br />(Line 145: `mobile_reward_share`)](https://github.com/helium/proto/blob/40388d260fd3603f453a965dbc13f79470b5adcb/src/service/poc_mobile.proto#L145)                    |
+| `foundation-mobile-verified`      | `RewardManifest`                          | `reward_manifest.*`                     | [`reward_manifest.proto`<br />(Line 5: `reward_manifest`)](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5)                                  |
 
 ### Arweave
 
