--- a/docs/oracles/price-oracles.mdx
+++ b/docs/oracles/price-oracles.mdx
@@ -22,9 +22,9 @@ existing Helium L1 price oracles continue to contribute market data.
 Once a stable price feed is available, community-sourced price feeds can be removed in favor of
 Pyth.
 
-✅ [HNT/USD](https://pyth.network/price-feeds/crypto-hnt-usd) Integrated May 11, 2023  
-🔜 [IOT/USD](https://pyth.network/price-feeds/crypto-iot-usd)  
-🔜 [MOBILE/USD](https://pyth.network/price-feeds/crypto-mobile-usd)
+- ✅ [HNT/USD](https://pyth.network/price-feeds/crypto-hnt-usd) Integrated May 11, 2023
+- 🔜 [IOT/USD](https://pyth.network/price-feeds/crypto-iot-usd)
+- 🔜 [MOBILE/USD](https://pyth.network/price-feeds/crypto-mobile-usd)
 
 :::
 
