minor formatting and copy edits

--- a/docs/hotspot-makers/become-a-maker/burn-hnt-to-maker-wallet.mdx
+++ b/docs/hotspot-makers/become-a-maker/burn-hnt-to-maker-wallet.mdx
@@ -62,27 +62,28 @@ transactions will fail.
 
 ## Maker Integration Test Wallet Address
 
-During the course of your testing, you can use the Maker Integration Test wallet address created by
-the Helium Foundation. This wallet does not contain any Data Credits so onboarding transactions will
-fail but it allows you to smoke test the onboarding steps. Here is that address:
+During your testing, you can use the Maker Integration Test wallet address created by the Helium
+Foundation. This wallet does not contain any Data Credits so onboarding transactions will fail but
+it allows you to smoke test the onboarding steps.
 
-[https://explorer-old.helium.com/accounts/138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr](https://explorer-old.helium.com/accounts/138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr)
+Maker Integration Test Wallet Address:
+
+[138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr](https://explorer-old.helium.com/accounts/138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr)
 
 ## Burning HNT to Supply Data Credits
 
-:::warning
+:::warning Double-check any wallet address before executing any HNT burn.
 
 Once you burn HNT to a specified wallet address, they are burned forever. The resulting DC are
-non-transferable. Please double-check any wallet address before executing any HNT burn. Test large
-transactions with a small trial amount beforehand.
+non-transferable.
 
 :::
 
 The actual mechanism for burning HNT to DCs is via an on-chain burn transaction using the
 [Helium Wallet app](/wallets/helium-wallet-app). Follow the instructions to download and install the
 Helium Wallet on your device. Once installed, you'll
-[use the `Swap` tool](/hotspot-makers/become-a-maker/funding-a-maker-account) to supply data credits
-to your specified maker wallet, which should be specified as the Recipient wallet.
+[use the "Swap" interface](/hotspot-makers/become-a-maker/funding-a-maker-account) to supply data
+credits to your specified Maker wallet, which should be specified as the Recipient wallet.
 
 :::warning
 
