--- a/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
+++ b/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
@@ -68,8 +68,7 @@ Helium Wallet app before committing the transaction.
 
 Data Credits cannot be refunded, exchanged for other tokens, or transferred between wallets.
 
-Operations should be first tested with a small test amount. Always double-check the addresses before
-performing essential operations.
+Always double-check the addresses before performing essential operations.
 
 :::
 
