Update and clarify maker HNT-> DC burn instructions (#1353)
* Add large transaction good practices to warning

Add to warning: Test transactions first with a small amount and double-check addresses before approving.

* Removed burn HNT using CLI wallet instructions

Removed outdated info about burning HNT using the CLI wallet on the Helium L1

* line wraps and minor editorial

* minor formatting and copy edits

---------

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>

--- a/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
+++ b/docs/hotspot-makers/become-a-maker/funding-a-maker-account.mdx
@@ -68,6 +68,8 @@ Helium Wallet app before committing the transaction.
 
 Data Credits cannot be refunded, exchanged for other tokens, or transferred between wallets.
 
+Always double-check the addresses before performing essential operations.
+
 :::
 
 ### Method 1: Use the Helium Wallet app
