--- a/docs/hotspot-makers/become-a-maker/burn-hnt-to-maker-wallet.mdx
+++ b/docs/hotspot-makers/become-a-maker/burn-hnt-to-maker-wallet.mdx
@@ -30,10 +30,10 @@ Hotspots you manufacture and distribute. In turn, the Helium Foundation adds the
 server. When a Hotspot is onboarded by your end customer, the onboarding server knows to associate
 it with your Maker ID, and associated Maker Wallet address. If, when a Hotspot is onboarded, it's
 present in the onboarding server and you have ample Data Credits to pay the onboarding fees, the
-blockchain will add the Hotspot. And if you've
-[integrated your Hotspot in the Hotspot App onboarding flow](/hotspot-makers/become-a-maker/hotspot-integration-testing),
-the Wallet knows to use your approved Maker Wallet address. At this point, the Data Credits will be
-used for the transactions with your wallet address as the payer.
+blockchain will add the Hotspot. And if you've integrated your Hotspot in the Hotspot App
+[onboarding flow](/hotspot-makers/become-a-maker/hotspot-integration-testing), the Wallet knows to
+use your approved Maker Wallet address. At this point, the Data Credits will be used for the
+transactions with your wallet address as the payer.
 
 ## Hotspot Data Credit Fees
 
@@ -62,47 +62,28 @@ transactions will fail.
 
 ## Maker Integration Test Wallet Address
 
-During the course of your testing, you can use the Maker Integration Test wallet address created by
-the Helium Foundation. This wallet does not contain any Data Credits so onboarding transactions will
-fail but it allows you to smoke test the onboarding steps. Here is that address:
+During your testing, you can use the Maker Integration Test wallet address created by the Helium
+Foundation. This wallet does not contain any Data Credits so onboarding transactions will fail but
+it allows you to smoke test the onboarding steps.
 
-[https://explorer-old.helium.com/accounts/138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr](https://explorer-old.helium.com/accounts/138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr)
+Maker Integration Test Wallet Address:
+
+[138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr](https://explorer-old.helium.com/accounts/138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr)
 
 ## Burning HNT to Supply Data Credits
 
-:::warning
+:::warning Double-check any wallet address before executing any HNT burn.
 
-Once you burn HNT to a specified wallet address, they are lost and gone forever. The resulting DCs
-are non-transferable. Please double-check any wallet address before executing any HNT burn.
+Once you burn HNT to a specified wallet address, they are burned forever. The resulting DC are
+non-transferable.
 
 :::
 
-The actual mechanism for burning HNT to DCs is via an on-chain burn transaction
-[using the Helium Blockchain Wallet CLI](https://github.com/helium/helium-wallet-rs). Follow the
-instructions to download and install the CLI Wallet on your local machine. Once installed, you'll
-use the `burn` command to supply data credits to your specified maker wallet.
-
-You can run `$ helium-wallet burn -h` for a full print-out of what options are available, but here's
-the basic command structure:
-
-```shell
-$ helium-wallet burn --amount <amount> --payee <payee> --commit
-```
-
-- `amount` is the amount of HNT you wish to burn to DCs
-- `payee` is the target wallet address to which you wish to burn DCs
-
-You can also supply a `memo` input but it's not required.
-
-So, for example, if you want to burn `10,000` HNT to the Maker Test Integration address, the full
-command would look like this:
-
-```shell
-$ helium-wallet burn --amount 10,000 --payee 138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVHzLTup1UbnPDvbxmr --commit
-```
-
-When this runs, you'll be asked to supply the passphrase for your HNT wallet. If this is correct,
-and you have enough HNT to pay for the specified burn amount, it will succeed.
+The actual mechanism for burning HNT to DCs is via an on-chain burn transaction using the
+[Helium Wallet app](/wallets/helium-wallet-app). Follow the instructions to download and install the
+Helium Wallet on your device. Once installed, you'll
+[use the "Swap" interface](/hotspot-makers/become-a-maker/funding-a-maker-account) to supply data
+credits to your specified Maker wallet, which should be specified as the Recipient wallet.
 
 :::warning
 
