minor copy edits

--- a/docs/oracles/oracle-data.mdx
+++ b/docs/oracles/oracle-data.mdx
@@ -12,10 +12,10 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 The Helium Network operates Oracles that perform various tasks backing Proof of Coverage and data
 transfer for the LoRaWAN (IOT), Mobile, and any future networks. These Oracles provide extensive
-logs for the purposes of analysis of the Helium subDAOs.
+logs for analysis of the Helium subDAOs.
 
-The Helium Oracles handle all data about the network, with the exception of transactions handled by
-the [Helium Program Libraries](https://github.com/helium/helium-program-library) on Solana.
+The Helium Oracles handle all data about the network, except for transactions handled by the
+[Helium Program Libraries](https://github.com/helium/helium-program-library) on Solana.
 
 <!--TODO: break out all the data for each, what is the bucket, what data is in each.  -->
 
@@ -28,8 +28,8 @@ under the top-level data category prefixes listed below. All data provided in th
 available on a basis of 'Requestor Pays', meaning you (the requester) will pay for the data transfer
 and AWS API costs incurred from the data requests.
 
-_For more information on accessing data from an AWS requester pays bucket, refer to
-[Downloading objects in Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/ObjectsinRequesterPaysBuckets.html)._
+For more information on accessing data from an AWS requester pays bucket, refer to
+[Downloading objects in Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/ObjectsinRequesterPaysBuckets.html).
 
 | Top Level Data Category Prefixes  |
 | --------------------------------- |
