organization and more reference links

--- a/docs/governance/hip.mdx
+++ b/docs/governance/hip.mdx
@@ -13,6 +13,16 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 Helium Improvement Proposals ("HIPs") are the core unit of change in the Helium Network and for the
 Helium Community.
 
+Best practice for new HIPs is to vet an idea with the Helium community [via Discord][discord] in the
+[hip-discussion][discord-hip] channel.
+
+Discussion with other Community members is a great place to gather initial feedback for an idea and
+learn from previous discussions.
+
+All HIPs are managed entirely from the [HIP GitHub repository][github-hip] and are discussed in the
+`Helium Improvement Proposal` channels of [Helium Discord][discord]. All members of the Helium
+Community are encouraged to create HIPs and participate in the governance process.
+
 ---
 
 ## How an Idea Becomes a HIP
