--- a/docs/governance/governance.mdx
+++ b/docs/governance/governance.mdx
@@ -12,59 +12,37 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/community/community.png')} />
 
-The Helium Community is the home to hundreds of developers and network operators who collaborate
-across the world every day to build the global decentralized wireless network that is Helium.
+The Helium Community is home to hundreds of developers and network operators collaborating to build
+global decentralized wireless networks.
 
-The Helium Community utilizes network-wide, token voting for Governance. The Helium Improvement
-Proposal, or "HIP", is the core unit of change.
-
-Anyone is welcome and encouraged to write a HIP. HIP Editors are Foundation Employees or Community
-Volunteers who assist authors with HIP readiness.
-
-All token holders are eligible to vote! To participate in making changes to the Helium Network,
-token holders should stake their tokens in Realms.
-
-All are welcome to shape the future of decentralized wireless.
-
-Read on for more information and join us!
-
-## Contribute
-
-### Discord
-
-The [Helium Discord][discord] is the primary communication channel for the Helium Network Community.
-Here you'll find real-time, in-depth discussion on all parts of the Helium Network. It is also the
-primary venue to get support for using the Network.
-
-- [Join the Helium Community Discord][discord]
+> The Helium Improvement Proposal ("HIP") is the core unit of change.
 
 ---
 
 ## Propose
 
+Anyone is welcome and encouraged to write a HIP and shape the future of decentralized wireless.
+
 ### Helium Improvement Proposals
 
-The Helium Community uses a governance mechanism called **Helium Improvement Proposals** (known as
-"HIPs"). Modeled on BIPs from the Bitcoin community, as well as pulling from influences of
-open-source development, HIPs are used to introduce, debate, and approve/reject new changes to major
-elements of the Network like the core blockchain, HNT, IOT MOBILE token economics, and Network
+The Helium Community uses a governance mechanism called Helium Improvement Proposal, known as a
+"HIP," modeled on ["BIP"s][bip] from the Bitcoin community and influenced by open-source development
+practices.
+
+The HIP process introduces, debates, and approves/rejects new changes to core fundamentals of the
+Network, for example, the core blockchain, HNT, IOT, or MOBILE token economics, and Network
 governance itself.
 
-In the earliest phases, it's best to vet an idea with the Helium community [via Discord][discord].
-This is a good way to see if there is initial support for the idea, or if it's been discussed
-before. The [hip-discussion][discord-hip] channel is a great place to circulate an early idea.
-
-HIPs are managed entirely from the [HIP GitHub repository][github-hip]. HIP discussions also happen
-in the `Helium Improvement Proposal` channels of [Helium Discord][discord]. All members of the
-Helium Community are encouraged to create HIPs and participate in the governance process.
-
-- [HIP Repo on GitHub][github-hip]
-
-Learn more about HIPs [here][hip-docs]
+Learn more about HIPs [here][hip-docs].
 
 ---
 
 ## Vote
+
+The Helium Community utilizes network-wide token voting for governance.
+
+All token holders are eligible to vote! To participate in making changes to the Helium Network,
+token holders should stake their tokens in [Realms][realms].
 
 ### Realms
 
@@ -84,11 +62,11 @@ Join the DAOs on Realms.
 
 ## Be In The Know
 
-### Monthly Community Calls
+### Community Calls
 
 The Helium Community holds monthly video calls (led by the [Helium Foundation][foundation]). These
-typically happen on the the **4th Wednesday of each month at Noon ET**. Each call has an open
-agenda, and any community member can join and add items to the agenda to be discussed.
+typically happen on the **4th Wednesday of each month at Noon ET**. Each call has an open agenda,
+and any community member can join and add items to the agenda to be discussed.
 
 - [Community Call Notes and Agenda][community-call-notes]
 - [Video recordings of previous community calls][community-call-video] are linked in the Community
@@ -96,19 +74,24 @@ agenda, and any community member can join and add items to the agenda to be disc
 
 ### Discord
 
+The [Helium Discord][discord] is the primary communication channel for the Helium Community. Here
+you'll find real-time, in-depth discussion on all parts of the Helium Network. It is also the
+primary venue to get support for using the Network.
+
 All HIP and Governance discussions take place on the [Helium Discord][discord].
+
+- [Join the Helium Community Discord][discord]
 
 ### Socials + Ecosystem Voices
 
 As a network steward, the Helium Foundation posts important governance news, calls to vote, and more
 on Twitter. [Follow @HeliumFndn][foundation-twitter] on Twitter to stay up to date.
 
-As a decentralized network, there are numerous voices that discuss governance, host debates, and
-explain HIPs in layman's terms. You can find many of these influential voices in Discord, on
-Twitter, or Youtube.
+As a decentralized network, numerous voices discuss governance, host debates, and explain HIPs in
+layman's terms. You can find many of these influential voices in Discord, on Twitter, or on YouTube.
 
-_If you'd like to have your name or channels listed and linked here as a governance resource, submit
-a ticket in the Helium [Docs Repo][docs-issues]._
+If you'd like to have your name or channels listed and linked here as a governance resource, submit
+a ticket in the Helium [Docs Repo][docs-issues].
 
 [discord]: https://discord.gg/helium
 [docs-issues]: https://github.com/helium/docs/issues
@@ -125,3 +108,5 @@ a ticket in the Helium [Docs Repo][docs-issues]._
 [discord-hip]: discord://discord.com/channels/404106811252408320/730243559873052754
 [hip-docs]: /hip
 [foundation-twitter]: https://twitter.com/HeliumFndn
+[realms]: /governance/realms
+[bip]: https://github.com/bitcoin/bips
