--- a/docs/helium-tokens/datacredit-portal.mdx
+++ b/docs/helium-tokens/datacredit-portal.mdx
@@ -14,13 +14,12 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 <br />
 <br />
 
-The Data Credit Portal built by [Sphere](https://sphere.engineer) allows network users to acquire
-Data Credits without directly holding cryptocurrency. The tool is designed for allocating Data
-Credits for network users like [LNS operators](/iot/open-lns) or mobile
-[service providers](/mobile/service-providers). The tool provides a clear invoice to simplify
-accounting.
+The Data Credit Portal built by [Sphere][sphere] allows network users to acquire Data Credits
+without directly holding cryptocurrency. The tool is designed for allocating Data Credits for
+network users like [LNS operators][open-lns] or mobile [service providers][service-providers]. The
+tool provides a clear invoice to simplify accounting.
 
-Access the Data Credit Portal at [dc-portal.helium.com](https://dc-portal.helium.com).
+Access the Data Credit Portal at [dc-portal.helium.com][dc-portal].
 
 <figure className="screensnippet-wrapper">
   <img
@@ -35,8 +34,7 @@ Access the Data Credit Portal at [dc-portal.helium.com](https://dc-portal.helium
 :::note This portal is currently available to the United States only.
 
 If you are in another region and this is your only means of purchase, please email
-[hello@helium.foundation](mailto:hello@helium.foundation) with the subject `DC Portal Invoice` for
-assistance.
+[hello@helium.foundation][mailto-foundation] with the subject `DC Portal Invoice` for assistance.
 
 :::
 
@@ -72,8 +70,8 @@ is Stripe's crypto payment service. Hit “Continue” again.
 
 ### KYC
 
-If you have already completed Link KYC, you can skip to [payment method](#payment-method). If you
-are new to Link, you will need to sign up.
+If you have already completed Link KYC, you can skip to [payment method][payment-method]. If you are
+new to Link, you will need to sign up.
 
 First, fill in your email address.
 
@@ -239,3 +237,10 @@ https://dc-portal.helium.com/?oui=24&memo=HelloHelium
 | ----------------- | ------ | ------------- |
 | OUI               | `oui`  | `oui=24`      |
 | Transaction memo. | `memo` | `memo=aX0fe8` |
+
+[sphere]: https://sphere.engineer
+[open-lns]: /iot/open-lns
+[service-providers]: /mobile/service-providers
+[dc-portal]: https://dc-portal.helium.com
+[payment-method]: #payment-method
+[mailto-foundation]: mailto:hello@helium.foundation
