--- a/docs/helium-tokens/datacredit-portal.mdx
+++ b/docs/helium-tokens/datacredit-portal.mdx
@@ -5,7 +5,7 @@ pagination_label: Data Credit Portal
 sidebar_label: Buy Data Credits with Credit Card
 description: Helium Data Credit Portal Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /helium-tokens/data-credit-portal
+slug: /data-credit-portal
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
