--- a/docs/helium-tokens/datacredit.mdx
+++ b/docs/helium-tokens/datacredit.mdx
@@ -130,8 +130,8 @@ acquiring Data Credits.
 
 ### Sphere Data Credit Portal
 
-The [Data Credit Portal](/helium-tokens/data-credit-portal) built by
-[Sphere](https://sphere.engineer) allows network users to acquire Data Credits without directly
-holding cryptocurrency. The tool is designed for allocating Data Credits for network users like
-[LNS operators](/iot/open-lns) or mobile [service providers](/mobile/service-providers). The tool
-provides a clear invoice once transactions are complete to simplify accounting.
+The [Data Credit Portal](/data-credit-portal) built by [Sphere](https://sphere.engineer) allows
+network users to acquire Data Credits without directly holding cryptocurrency. The tool is designed
+for allocating Data Credits for network users like [LNS operators](/iot/open-lns) or mobile
+[service providers](/mobile/service-providers). The tool provides a clear invoice once transactions
+are complete to simplify accounting.
