--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -363,7 +363,8 @@ rewards have been claimed. Claiming rewards, then, consists of two steps:
 2. Issue the difference between the total lifetime rewards and total claimed rewards to the hotspot
    owner.
 
-In practice, we have made it so that this can all happen in a singular transaction.
+In practice, we have made it so that this can all happen in a singular transaction for PoC rewards.
+Staking rewards will happen in transactions combining up to 4 days of rewards.
 
 ### Finding current rewards
 
