--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -23,7 +23,7 @@ recognized by all major wallets. Open your wallet, and see all of your hotspots 
 
 ## Compression NFTs
 
-A new developmenet on the Solana Blockchain has been
+A new development on the Solana Blockchain has been
 [Compression NFTs](https://www.metaplex.com/posts/expanding-digital-assets-with-compression-for-nfts).
 
 With normal NFTs on Solana, each token is stored on chain as a distinct spl-token mint, with
@@ -34,7 +34,7 @@ also a large usage of storage space on the blockchain.
 
 Enter: Compression NFTs. Compression NFTs use a Concurrent Merkle Tree to compress millions of NFTs
 into one 32 byte hash. Clients executing transactions on compressed NFTs are able to send a
-cryptograpic proof to the blockchain that verifies the NFT and ownership. In other words, instead of
+cryptographic proof to the blockchain that verifies the NFT and ownership. In other words, instead of
 sending a transaction with:
 
 ```rust
