--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -94,7 +94,7 @@ const creator = entityCreatorKey(dao)[0]
 
 This should output: `Fv5hf1Fg58htfC7YEXKNEfkpuogUUQDDTLgjGWxxv48H`
 
-Now, we can use the metaplex digital asset api to get rewardable entities my wallet
+Now, we can use the Metaplex Digital Asset API to get rewardable entities my wallet
 (`BcJzP2hEYgzjUwpHEtS6RhuqGfEJVx8Rq3MejujAAWrR`) owns:
 
 ```bash
