--- a/docs/solana/rewardable-entities.mdx
+++ b/docs/solana/rewardable-entities.mdx
@@ -376,7 +376,7 @@ Oracles work off of a restful API that involves
 
 The SDK simplifies this process into two functions, `getCurrentRewards` and `formTransaction`.
 
-If you have interst in using the REST api, you can see the relatively simple client code
+If you have interest in using the REST api, you can see the relatively simple client code
 [here](https://github.com/helium/helium-program-library/blob/master/packages/distributor-oracle/src/client.ts)
 
 To fetch rewards across all oracles for a given asset id:
